--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-streamlit
-Pillow
-python-docx
-stability-sdk
-google-api-python-client
-google-auth
-google-auth-httplib2
-google-auth-oauthlib
+streamlit==1.41.1
+Pillow==10.4.0
+python-docx==1.1.2
+
+stability-sdk==0.8.6
+protobuf==4.25.3
+grpcio==1.67.1
+
+google-api-python-client==2.151.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
