--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
 streamlit==1.41.1
 Pillow==10.4.0
 python-docx==1.1.2
-
-stability-sdk==0.8.6
-protobuf==4.25.3
-
-google-api-python-client==2.151.0
-google-auth==2.35.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
+requests==2.32.3
